...
                            .frame(maxWidth: .infinity)
                            .padding()
                            .background(Color.blue)
                            .foregroundColor(.white)
                            .cornerRadius(10)
                    }
                    .accessibilityIdentifier("chooseFromGalleryButton")
                }
                .padding(.horizontal, 40)
                
                Spacer()
            }
            .sheet(isPresented: $showCamera) {
...
